 cnp-stig-postgresql-port-external-access-ei09972.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stig-postgresql-port-external-access-jcyhx7y
  namespace: kube-system
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
